ProdTOI Approved with minimal Future Improvements

--- a/src/application.properties
+++ b/src/application.properties
@@ -1,3 +1,4 @@
+#Database And Hibernate Properties
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/products
 jdbc.username = root
@@ -6,3 +7,6 @@ hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.hbm2ddl.auto= update
+
+#URL of the image that is being saved as Product Image.
+imageURl = E:\\iphone.jpg
